Correct menu overflow on chrome

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -65,7 +65,7 @@ body section{
 			ul{
 				position: absolute;
 				margin: auto;
-				width: 520px;
+				width: 524px;
 				
 				li{
 					display: inline-block;
